fixed html and css

--- a/index.html
+++ b/index.html
@@ -9,57 +9,96 @@
 </head>
 <body>
     <div class="header">
-        <a id="logo" href="index.html">
-            <img src="/images/img-tea-cozy-logo.png" alt="tea cozy logo">
-        </a>
-        <nav id="navbar">
-            <a href="#mission">Mission</a>
-            <a href="#featured-tea">Featured Tea</a>
-            <a href="#locations">Locations</a>
-        </nav>
+
+        <img class="logo" src="images/img-tea-cozy-logo.png">
+
+    <nav>
+        <ul class="navigation">
+            <a href="#mission"><li>Mission</li></a>
+            <a href="#featured-tea"><li>Featured Tea</li></a>
+            <a href="#locations"><li>Locations</li></a>
+        </ul>
+    </nav>
     </div>
-    <div id="mission-section">
-        <img src="/images/img-mission-background.jpg" alt="mission image">
-        <div id="mission-text">
-            <h2>Our Mission</h2>
-            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-        </div>
-    </div>
-    <div id="featured-tea">
-        <div id="featured-tea-text">
-            <h2>Tea of the Month</h2>
-            <h4>What's Steeping at The Tea Cozy?</h4>
-        </div>
-        <div id="featured-tea-images">
-            <div><img src="/images/img-berryblitz.jpg" alt="fall berry blitz tea"><h4>Fall Berry Blitz Tea</h4></div>
-            <div><img src="/images/img-spiced-rum.jpg" alt="spiced rum tea"><h4>Spiced Rum Tea</h4></div>
-            <div><img src="/images/img-donut.jpg" alt="seasonal donuts"><h4>Seasonal Donuts</h4></div>
-            <div><img src="/images/img-myrtle-ave.jpg" alt="myrtle avenue tea"><h4>Myrtle Avenue Tea</h4></div>
-            <div><img src="/images/img-bedford-bizarre.jpg" alt="bedford bizarre tea"><h4>Bedford Bizarre Tea</h4></div>
-        </div>
-    </div>
-    <div id="locations">
-        <img src="/images/img-locations-background.jpg" alt="location image">
-        <div id="locations-text">
-            <div id="locations-title"><h2>Locations</h2></div>
-            <div id="locations-info">
-                <div><h3>Downtown</h3><h4>384 West 4th St</h4><h4>Suite 108</h4><h4>Portland, Maine</h4></div>
-                <div><h3>East Bayside</h3><h4>3433 Phisherman's Avenue</h4><h4>(Northwest Corner)</h4><h4>Portland, Maine</h4></div>
-                <div><h3>Oakdale</h3><h4>515 Crescent Avenue</h4><h4>Second Floor</h4><h4>Portland, Maine</h4></div>
+
+     <! -- mission section --> 
+
+    <div id="mission">
+        <div class="mission-container">
+            <div class="text-over">
+                <h2>Our Mission</h2>
+                  <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
             </div>
+
         </div>
+
+    </div>
+
+    <! --featured tea section -->
+    <div id="featured-tea">
+        <h2>Tea of the Month</h2>
+        <h4>What's steeping at The Tea Cozy</h4>
+    </div>
+    <! --featured products -->
+    <div class="tea-container">
+        <div class="prod"> 
+            <img src="images/img-berryblitz.jpg">
+            <h4>Fall Berry Blitz Tea</h4>
+        </div>   
+        <div class="prod"> 
+            <img src="images/img-spiced-rum.jpg">
+            <h4>Spiced Rum Tea</h4>
+        </div> 
+        <div class="prod"> 
+            <img src="images/img-donut.jpg">
+            <h4>Seasonal Donuts</h4>
+        </div> 
+        <div class="prod"> 
+            <img src="images/img-myrtle-ave.jpg">
+            <h4>Myrtle Ave Tea</h4>
+        </div> 
+        <div class="prod"> 
+            <img src="images/img-bedford-bizarre.jpg">
+            <h4>Bedford Bizzarre Tea</h4>
+        </div> 
+    </div>
+    <! -- locations -- >
+    <div class="loc-container" id="locations">
+        <div class="section-head">
+        <p>Locations</p>
+        
+        </div>
+        <div class="location-box">
+            <div class="location">
+             <h3>Downtown</h3>
+                <p>384 West 4th St </p>
+                <p>Suite 108</p> 
+                <p>Portland, Maine</p>
+            </div>
+            <div class="location">
+                <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p> 
+                    <p>Portland, Maine</p>
+               </div>
+               <div class="location">
+                <h3>Oakdale</h3>
+                <p>515 Crescent Avenue</p>
+                <p>Second Floor</p>
+                <p>Portland, Maine</p>
+               </div>     
+        </div>      
     </div>
     <footer>
-        <div id="contact">
+        <div class="contact">
             <h2>The Tea Cozy</h2>
             <h5>contact@theteacozy.com</h5>
             <h5>917-555-8904</h5>
         </div>
-        <div id="copywrite">
-            <h4>copyright The Tea Cozy 2017</h4>
+        <div class="copyright">
+            <h5>copyright The Tea Cozy 2017</h5>
         </div>
     </footer>
+
 </body>
 </html>
-
-<div class="container">
